--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
+    "leaflet": "^1.9.3",
+    "opencage-api-client": "^1.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.69.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.0",
