--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "golozurapp-v1.0",
+  "name": "golozurapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -27,18 +27,11 @@
     "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
-    "leaflet": "^1.9.3",
     "opencage-api-client": "^1.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-leaflet": "^4.2.1",
     "react-native": "0.69.5",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.0",
-    "react-native-dropdown-select-list": "^2.0.4",
-    "react-native-geocoder": "^0.5.0",
-    "react-native-geocoding": "^0.5.0",
-    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-maps": "0.31.1",
     "react-native-reanimated": "~2.9.1",
