--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "golozurapp-v1.0",
-    "slug": "golozurapp-v1.0",
+    "name": "golozurapp",
+    "slug": "golozurapp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
