--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+    "web": "expo start --web ",
     "devtools": "expo start --android && react-devtools "
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo/webpack-config": "^0.16.19",
     "@gorhom/bottom-sheet": "^4.4.3",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^5.12.9",
